Demand Navigator/src/objects/Fiscal_Year_Planning__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>FCST Fiscal Year List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fiscal Year List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Fiscal Year Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>